--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,4 @@
-*.r linguist-detectable=true
+*.Rmd linguist-detectable=true
 *.js linguist-detectable=false
 *.html linguist-detectable=false
 *.xml linguist-detectable=false
